[gd_scene load_steps=2 format=3 uid="uid://c4t6prcr3rmgq"]

[ext_resource type="Script" uid="uid://6rgnp3q4qns6" path="res://Scripts/game_screen.gd" id="1_qy101"]

[node name="GameScreen" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qy101")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Игра: <название>"

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Гейм-мастер: <ник>"

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Игроки:"

[node name="PlayerList" type="ItemList" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Присоединиться к игре\", name: JoinButton"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "\"Назад\", name: BackButton"
